vest-dsl/test/bad/const_byte_array_len_mismatch3.vest
const BAR: [u8; 4] = "abcde"
